--- a/src/css/Todolist.css
+++ b/src/css/Todolist.css
@@ -30,7 +30,15 @@
     margin-bottom: 15px;
     border-radius: 5px;
     list-style: none;
+    position: relative;
   }
   ul.theList {
     padding: 0;
+  }
+
+ ul li span{
+    position: absolute;
+    right: 10px;
+    cursor: pointer;
+
   }
