Edit on click implemented on fix-2

--- a/src/css/Todolist.css
+++ b/src/css/Todolist.css
@@ -40,5 +40,15 @@
     position: absolute;
     right: 10px;
     cursor: pointer;
-
   }
+  
+ ul li input {
+   background-color: transparent;
+   border: 0;
+   color:whitesmoke;
+   font-size: 18px;
+ }
+
+ ul li input:focus {
+   outline: none;
+ }
